Fix the columns so form doesn't overlap with sidebar. Changed column1 div to col-md-2 and column2 div to col-md-10

--- a/css/styles.css
+++ b/css/styles.css
@@ -10,8 +10,7 @@ ul{
   background-color: #9BE3FF;
 }
 
-.column1{
-  margin-right: 50px;
+.col-md-2{
   border: 3px solid #B8EBFF;
   padding: 10px;
   background-color: #B8EBFF;
